create modal window

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,19 @@
 
 <ul class="menu" id="menu"></ul>
 
+	<div id="myModal" class="modal">
+		<div class="modal-content">
+			<span class="close" id = "closeModal">&times;</span>
+			<h2>Установите время на таймере</h2>
+			<div class="timer-button-container">
+				<button class="button-for-timer" data-second="5">5s</button>
+				<button class="button-for-timer" data-second="10">10s</button>
+				<button class="button-for-timer" data-second="20">20s</button>
+				<button class="button-for-timer" data-second="30">30s</button>
+			</div>
+		</div>
+	</div>
+
+
 </body>
 </html>
