--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 		</div>
 	</div>
 
-	<div id="myMessage" class="message">
+	<div id="myMessage" class="message hidden">
 		<div class="modal-content">
 			<span class="close" id="closeModal">&times;</span>
 			<div class="message-container">
